test_case/rust-lang_rust/51090_392276410_83.rs
compile_fail,E658\n#[repr(u128)] // error: use of unstable library feature 'repr128'\nenum Foo {\n    Bar(u64),\n}\n}\n